--- a/css/responsive.css
+++ b/css/responsive.css
@@ -62,7 +62,11 @@ lo ideal es 'cover' + background-repeat: no-repeat;
     h2.agregarProducto__titulo{
         width: auto;
     }
-    
+    /* ↓↓ SEEPRODUCTS.HTML */
+    .imgYdescrip{
+        display: flex;
+        flex-direction: column;
+    }
     
 }
 
@@ -201,6 +205,21 @@ lo ideal es 'cover' + background-repeat: no-repeat;
         margin-left: 1rem;
         width: auto;
     }
+    /* ↓↓seeProduct.html */
+    .productSelect__img{
+        width: 190px;
+        height: 144px;
+    }
+    .productSelect__container{
+        margin: 0.5rem;
+    }
+    .imgYdescrip{
+        display: flex;
+        flex-direction: column;
+    }
+    .productSelect__container__caracterist{
+        width: auto;
+    }
 }
 
 @media(min-width:320px) and (max-width:460px){ 
@@ -212,4 +231,11 @@ lo ideal es 'cover' + background-repeat: no-repeat;
     #newProduct__lupa{
         margin: 1.2rem;
     }
+     /* ↓↓seeProduct.html */
+    .productSelect__img{
+        border-radius: 5px;
+        height: auto; 
+        width: 90%;
+    }
+    
 }
