creacion logica see-products.js

--- a/css/seeProduct.css
+++ b/css/seeProduct.css
@@ -17,7 +17,7 @@
     height: 300px;
     width: 380px;
 }
-.productSelect__p{
+.productSelect__description{
     margin-left: 0.5rem;
     font-weight: 500;
 }
